# MS-CVRP

./: BitMatrix.h  CMakeLists.txt  EliteSol.h  EvaluationMemory.h  GranularManagement.h  Instance.h  LRUCache.h  PairBitMatrix.h  README.md  Solution.h  Solver.cpp  Solver.h  SplitLabel.h  Welford.h  base.cpp  base.h  main.cpp
results/: fig11_hgs_baseline.csv  fig11_hgs_guided.csv  fig14_guided_ms.csv  fig14_hgs_baseline.csv  fig14_hgs_guided.csv  fig14_ms.csv  fig6_mns_ts.csv  fig6_ms.csv  fig7_guided_ms.csv  fig8_ms_no_pr.csv  fig9_filo.csv  fig9_guided_ms.csv  fig9_hexaly13.csv  fig9_hgs_baseline.csv  fig9_lkh.csv  fig9_ms.csv
